<resources>
    <string name="app_name">Movies</string>

    <!-- Content Descriptions -->
    <string name="poster_description">The poster of movie</string>
    <string name="play_description">Play trailer</string>
    <string name="favorite_description">Button for favorite</string>

    <!-- Labels -->
    <string name="title_label">Title:</string>
    <string name="original_label">Original title:</string>
    <string name="rating_label">Rating:</string>
    <string name="date_label">Release Date:</string>
    <string name="overview_label">Overview:</string>
    <string name="video_label" translatable="false">Videos:</string>
    <string name="backdrop_description">Backdrop of movie</string>
    <string name="overview">Overview</string>
    <string name="cast">Cast</string>
    <string name="videos">Videos</string>
    <string name="actor_description">Photo of actor</string>

</resources>